# unity-example

./: .gitignore  README.md
Assets/: EcsactExample.unity  example.ecsact  example.ecsact.cs
Assets/EcsactSystems/: UseExample.wasm
Assets/Editor/: EcsactCsharpSystemImplSettings.asset  EcsactSettings.asset
Assets/Plugins/: EcsactRuntime.lib
Assets/Resources/: Block.prefab  Menu.prefab
Assets/Resources/Settings/: EcsactRuntimeSettings.asset  EcsactWasmRuntimeSettings.asset
Assets/Scenes/: AsyncMenu.unity  BasicExample.unity
Assets/Scripts/: AddExample.cs  AsyncMenu.cs  BasicExample.cs  Move.cs  MoveControls.cs  StaticCollider.cs  TestScript.cs  UseExample.cs
Assets/Scripts/Generate/: GenerateBlock.cs
Assets/Scripts/NestedSystems/: CollisionSystem.cs  CollisionSystems.cs
Assets/Scripts/Systems/: BasicExampleSystem.cs  GenerateBlockSystem.cs  MoveSystems.cs  UnityExamples.wasm  example.ecsact  example.ecsact.cs
Assets/Scripts/Systems/NestedSystems/: CollisionSystem.cs
Assets/Scripts/UnitySync/: AddBlock.cs  SyncMove.cs
EcsactSystems/: BUILD.bazel  UseExample.cc
ProjectSettings/: EditorBuildSettings.asset
SystemImpls/: WasmExample.ps1  basic_example.cc  collision.cc  example.ecsact.hh  example.ecsact.systems.cc  example.ecsact.systems.h  example.ecsact.systems.hh  generate_block_system.cc  move.cc
